[package]
name = "rukako-shader"
version = "0.0.0"
edition = "2018"
description = "WIP the Shader part of the GPU renderer. This publish is intended to take the name."
repository = "https://github.com/hatoo/rukako"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = { version = "0.4.0-alpha.10", features = ["glam"] }
bytemuck = { version = "1.6.3", features = ["derive"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rand = "0.8"
float-ord = "0.3.1"