[package]
name = "rukako"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.8.1"
bytemuck = { version = "1.6.3", features = ["derive"] }
env_logger = "0.8"
pollster = "0.2"
image = "0.23"
anyhow = "1.0"
png = "0.16.8"

rukako-shader = { path = "../rukako-shader" }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }